@@ -3,7 +3,6 @@ blib
 .*\.bs
 build
 .*\.c
-CairoEnums.xs
 CVS
 Makefile$
 Makefile\.old
