@@ -1,3 +1,2 @@
 TODO's
- - creating/in/output/destroing structs (translate c <-> perl)
- - xlib, xcb, glitz, types.
+ - the stream stuff in CairoSurface.xs
